Added identity server 4 and logging

--- a/Catalog/Catalog.API/appsettings.json
+++ b/Catalog/Catalog.API/appsettings.json
@@ -1,4 +1,15 @@
 {
+  "CdnHost": "http://www.alevelwebsite.com",
+  "PathBase": "http://www.alevelwebsite.com:5000",
+  "ImgUrl": "assets/images",
+  "Authorization": {
+    "Authority": "http://www.alevelwebsite.com:5001",
+    "SiteAudience": "alevelwebsite.com"
+  },
+  "Client": {
+    "Id": "catalog",
+    "Secret": "secret"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
