--- a/Catalog/Catalog.API/Dockerfile
+++ b/Catalog/Catalog.API/Dockerfile
@@ -16,5 +16,5 @@ RUN dotnet publish "Catalog.API.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
-COPY --from=publish /app/publish .
+COPY --from=publish /app/publish .с
 ENTRYPOINT ["dotnet", "Catalog.API.dll"]
